fixed p margin on ios and grow offset

--- a/src/assets/scss/landingpage/faq.scss
+++ b/src/assets/scss/landingpage/faq.scss
@@ -12,11 +12,11 @@ $bgColor: #0d2e59;
   	background-color: transparent;
   	vertical-align: top;
 	display: inline-table;
-	width: 36%;
+	width: 39%;
 	padding: 2%;
 	text-align: left;
 	padding: 1em 2%;
-	margin: 5px 35px;
+	margin: 0 1.5%;
 	z-index: 90;
 	animation-play-state: paused;
 	h1 {
