--- a/src/assets/scss/landingpage/responsive.scss
+++ b/src/assets/scss/landingpage/responsive.scss
@@ -713,8 +713,8 @@
     .circle-content {
       margin-top: 0;
       p {
-          margin-inline-start: 26vw;
-          margin-inline-end: 26vw;
+          margin-left: 26vw;
+          margin-right: 26vw;
           /*#first {
             margin-block-start: 4vw;
             margin-block-end: 30vw;
@@ -822,8 +822,8 @@
       margin-top: 0;
     }
     p {
-      margin-inline-start: 23vw;
-      margin-inline-end: 23vw;
+      margin-left: 23vw;
+      margin-right: 23vw;
     }
     #heartBubble {
       display: none;
